...
    var mapelList: [MapelModel] = []

    /// Membuat deskripsi kolom di ``outlineView``.
    ///
    /// Mengatur properti `identifier` dan `customTitle`.
    let kolomTabelGuru: [ColumnInfo] = [
        ColumnInfo(identifier: "NamaGuru", customTitle: "Nama Guru"),
        ColumnInfo(identifier: "AlamatGuru", customTitle: "Alamat"),
        ColumnInfo(identifier: "TahunAktif", customTitle: "Tahun Aktif"),
        ColumnInfo(identifier: "Mapel", customTitle: "Mata Pelajaran"),
        ColumnInfo(identifier: "Struktural", customTitle: "Sebagai"),
    ]

    /// `NSUndoManager` khusus untuk ``DataSDI/GuruViewController``
    var myUndoManager: UndoManager = .init()

    /// Properti untuk menyimpan data yang dihapus
    /// untuk keperluan undo.
    var undoHapus: [Int64] = []
    /// Properti untuk menyimpan data yang dihapus
...
    /// Properti instans ``DataSDI/SuggestionManager``
    var suggestionManager: SuggestionManager!

    /// Properti untuk mengatur `NSTextField` yang sedang aktif editing.
    ///
    /// Berguna untuk menampilkan prediksi yang sesuai ketika menambah atau mengedit data
    /// melalui ``edit(_:)``.
    var activeText: NSTextField!

    /// Properti untuk menyimpan referensi jika ``guruu`` telah diisi dengan data yang ada
    /// di database dan telah diatur hierarki dalam ``mapelList``
    /// serta sudah ditampilkan setiap barisnya di ``outlineView``.
    var isDataLoaded: Bool = false
...
            searchField.delegate = self
            if let textFieldInsideSearchField = searchField.cell as? NSSearchFieldCell {
                textFieldInsideSearchField.placeholderString = "Cari guru..."
            }
        }

        if let hapusToolbarItem = toolbar.items.first(where: { $0.itemIdentifier.rawValue == "Hapus" }),
           let hapus = hapusToolbarItem.view as? NSButton
        {
            hapus.isEnabled = isItemSelected
            hapus.target = self
            hapus.action = #selector(hapusSerentak(_:))
        }
...

    /// Berguna untuk memperbarui action/target menu item undo/redo di Menu Bar.
    @objc func updateUndoRedo(_ sender: Any?) {
        guard let mainMenu = NSApp.mainMenu,
              let editMenuItem = mainMenu.item(withTitle: "Edit"),
              let editMenu = editMenuItem.submenu,
              let undoMenuItem = editMenu.items.first(where: { $0.identifier?.rawValue == "undo" }),
              let redoMenuItem = editMenu.items.first(where: { $0.identifier?.rawValue == "redo" })
        else {
            return
        }
        DispatchQueue.main.async { [unowned self] in
            let canRedo = myUndoManager.canRedo
            let canUndo = myUndoManager.canUndo
...
                case 4: strukturTextField = textField
                default: break
                }
            }

            // Tombol Simpan dan Batal (juga dibuat satu kali)
            let simpanButton = NSButton(title: "Simpan", target: self, action: (opsi == "edit") ? #selector(simpanEditedGuru(_:)) : #selector(simpanGuru(_:)))
            simpanButton.frame = NSRect(x: 430 - 95, y: 15, width: 80, height: 30)
            simpanButton.bezelStyle = .rounded
            simpanButton.keyEquivalent = "\r" // enter key
            simpanButton.identifier = NSUserInterfaceItemIdentifier(rawValue: "simpan")
            contentView.addSubview(simpanButton)

            let batalButton = NSButton(title: "Tutup", target: self, action: #selector(closeSheets(_:)))
            batalButton.frame = NSRect(x: 430 - 175, y: 15, width: 80, height: 30)
            batalButton.bezelStyle = .rounded
            batalButton.keyEquivalent = "\u{1b}" // escape key
...
            if let label = contentView.subviews.first(where: { $0.identifier?.rawValue == "titleLabel" }) as? NSTextField {
                label.stringValue = (opsi == "edit") ? "Edit data guru" : "Tambah data guru"
            }
        }

        // Update placeholder dan nilai sesuai kondisi opsi
        nameTextField.placeholderString = "ketik nama guru"
        addressTextField.placeholderString = "ketik alamat guru"
        yearTextField.placeholderString = "ketik tahun aktif"
        mapelTextField.placeholderString = "ketik mata pelajaran"
        strukturTextField.placeholderString = "ketik jabatan guru"

        // Ketika pilihan adalah edit.
        if opsi == "edit" {
            if guru.count > 1 {
                nameTextField.placeholderString = "memuat \(guru.count) data"
                addressTextField.placeholderString = "memuat \(guru.count) data"
...
