...
            </connections>
        </customObject>
        <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
        <customObject id="-3" userLabel="Application" customClass="NSObject"/>
        <menu title="Main Menu" systemMenu="main" id="Vcr-VG-54g">
            <items>
                <menuItem title="Data SDI" identifier="app" id="LIa-bO-Sqi">
                    <modifierMask key="keyEquivalentModifierMask"/>
                    <menu key="submenu" title="Data SDI" systemMenu="apple" id="BPs-nS-v9g">
                        <items>
                            <menuItem title="Data SDI..." id="26I-5R-Uuj">
                                <modifierMask key="keyEquivalentModifierMask"/>
                                <connections>
...
                                <modifierMask key="keyEquivalentModifierMask" option="YES" command="YES"/>
                                <connections>
                                    <action selector="hideOtherApplications:" target="-1" id="kv1-6b-5n1"/>
                                </connections>
                            </menuItem>
                            <menuItem isSeparatorItem="YES" id="Ttm-k9-2vG"/>
                            <menuItem title="Keluar Data SDI" keyEquivalent="q" id="ZGh-xs-VnJ">
                                <connections>
                                    <action selector="terminate:" target="-1" id="HWs-VX-g3V"/>
                                </connections>
                            </menuItem>
                        </items>
                    </menu>
...
                <outlet property="tmblhps" destination="6l9-W0-rYC" id="tEi-Nz-sig"/>
                <outlet property="toolbar" destination="CT9-yg-QXP" id="FEf-7U-Yrc"/>
                <outlet property="tracking" destination="QMo-hi-ULy" id="NSW-JU-yZf"/>
                <outlet property="window" destination="IV5-Jd-DFf" id="bA3-Gr-KLa"/>
            </connections>
        </customObject>
        <window identifier="MainWindow" title="Data SDI" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" frameAutosaveName="WindowFrame" animationBehavior="default" tabbingMode="disallowed" toolbarStyle="compact" id="IV5-Jd-DFf" userLabel="Window">
            <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES" fullSizeContentView="YES"/>
            <rect key="contentRect" x="700" y="281" width="525" height="452"/>
            <rect key="screenRect" x="0.0" y="0.0" width="1366" height="738"/>
            <view key="contentView" id="WbR-dc-uV5" customClass="NSSplitView">
                <rect key="frame" x="0.0" y="0.0" width="525" height="452"/>
                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
...
                            </buttonCell>
                        </button>
                        <connections>
                            <action selector="toggleSidebar:" target="-1" id="Gi0-9y-tDw"/>
                        </connections>
                    </toolbarItem>
                    <toolbarItem implicitItemIdentifier="ABF7805F-A4A7-4534-A630-70A40B3708B6" explicitItemIdentifier="popUpMenu" label="Tindakan" paletteLabel="Tindakan" toolTip="Lakukan tugas dengan Item yang dipilih" image="toolbarItem:HJG-2G-qG0:image" title="Item 1" sizingBehavior="auto" id="HJG-2G-qG0">
                        <popUpButton key="view" toolTip="Lakukan tugas dengan Item yang dipilih" verticalHuggingPriority="750" id="2qU-px-r7D">
                            <rect key="frame" x="1" y="14" width="54" height="25"/>
                            <autoresizingMask key="autoresizingMask"/>
                            <popUpButtonCell key="cell" type="roundTextured" title="Item 1" bezelStyle="texturedRounded" imagePosition="only" alignment="left" lineBreakMode="truncatingTail" state="on" borderStyle="border" imageScaling="proportionallyDown" inset="2" pullsDown="YES" selectedItem="bkF-1e-t1a" id="Fd5-pz-f29">
                                <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                <font key="font" metaFont="message"/>
...
                            </connections>
                        </button>
                        <connections>
                            <action selector="edit:" target="Qlc-3f-ICV" id="l6b-WV-QJ8"/>
                        </connections>
                    </toolbarItem>
                    <toolbarItem implicitItemIdentifier="8D060390-3A06-4CD0-8D42-86827F6A8E3C" explicitItemIdentifier="add" label="Catat" paletteLabel="Catat" toolTip="Tambahkan Data Baru" image="toolbarItem:2uH-VQ-HUh:image" sizingBehavior="auto" id="2uH-VQ-HUh" userLabel="Add">
                        <button key="view" identifier="add" toolTip="Tambahkan Data Baru" springLoaded="YES" verticalHuggingPriority="750" id="Wml-7I-8mX">
                            <rect key="frame" x="2" y="14" width="33" height="23"/>
                            <autoresizingMask key="autoresizingMask"/>
                            <buttonCell key="cell" type="roundTextured" alternateTitle=" " bezelStyle="texturedRounded" image="toolbarItem:2uH-VQ-HUh:image" imagePosition="overlaps" alignment="center" borderStyle="border" identifier="add" inset="2" id="Qdp-uG-y77">
                                <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                <font key="font" metaFont="system"/>
...
