...
                                <rect key="frame" x="0.0" y="0.0" width="133" height="254"/>
                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                <size key="intercellSpacing" width="3" height="0.0"/>
                                <color key="backgroundColor" name="_sourceListBackgroundColor" catalog="System" colorSpace="catalog"/>
                                <color key="gridColor" name="gridColor" catalog="System" colorSpace="catalog"/>
                                <tableColumns>
                                    <tableColumn identifier="DaftarColumn" width="101" minWidth="40" maxWidth="1000" id="J7H-Rk-2mg">
                                        <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border">
                                            <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
                                            <color key="backgroundColor" name="headerColor" catalog="System" colorSpace="catalog"/>
                                        </tableHeaderCell>
                                        <textFieldCell key="dataCell" lineBreakMode="truncatingTail" selectable="YES" editable="YES" refusesFirstResponder="YES" alignment="right" identifier="Daftar" id="1Vr-K8-0Kc">
                                            <font key="font" metaFont="system"/>
...
                                                            <constraint firstAttribute="width" constant="20" id="boS-Mf-vLN"/>
                                                        </constraints>
                                                        <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyUpOrDown" image="ellipsis.circle.fill" catalog="system" id="oyW-Qe-WZF"/>
                                                    </imageView>
                                                    <textField focusRingType="none" verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="p0Q-UE-7tm">
                                                        <rect key="frame" x="24" y="4" width="89" height="15"/>
                                                        <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="Pemasukan" usesSingleLineMode="YES" id="xNi-VB-WEN">
                                                            <font key="font" metaFont="cellTitle"/>
                                                            <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                                                            <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                                                        </textFieldCell>
                                                    </textField>
                                                </subviews>
...
