...
    // MARK: - Properti

    /// Pengidentifikasi unik untuk mata pelajaran.
    /// Ini digunakan untuk menentukan kesetaraan dan untuk menghasilkan nilai *hash*.
    var id: Int64

    /// Nama mata pelajaran (misalnya, "Matematika", "Fisika", "Bahasa Indonesia").
    var namaMapel: String

    /// Daftar guru yang mengajar mata pelajaran ini.
    /// Diasumsikan `GuruModel` adalah struktur atau kelas yang relevan.
    var guruList: [GuruModel]

...
